# mob

./: .envrc  .gitignore  bun.lockb  package-lock.json  package.json  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: publish.yml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  lib.rs  main.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/foo/: +page.svelte
src/routes/import/: +page.svelte
src/routes/sign/: +page.svelte
src/routes/verify/: +page.svelte
